@@ -1,0 +1,11 @@
+// <copyright file="IForwardDependenciesOn.cs" company="Mark Final">
+//  Opus
+// </copyright>
+// <summary>Opus Core</summary>
+// <author>Mark Final</author>
+namespace Opus.Core
+{
+    public interface IForwardDependenciesOn
+    {
+    }
+}
